emoji_window/emoji_window.h



// Message box callback type (confirmed: 1=OK, 0=Cancel)
typedef void (__stdcall *MessageBoxCallback)(int confirmed);


// 列表框回调函数类型 (stdcall 调用约定)
typedef void (__stdcall *ListBoxCallback)(HWND hListBox, int index);


// 组合框回调函数类型 (stdcall 调用约定)
typedef void (__stdcall *ComboBoxCallback)(HWND hComboBox, int index);


// ========== DataGridView 回调函数类型 ==========

// 单元格点击回调 (hGrid, row, col)
typedef void (__stdcall *DataGridCellClickCallback)(HWND hGrid, int row, int col);


// 单元格双击回调 (hGrid, row, col)
typedef void (__stdcall *DataGridCellDoubleClickCallback)(HWND hGrid, int row, int col);


// 单元格值改变回调 (hGrid, row, col)
typedef void (__stdcall *DataGridCellValueChangedCallback)(HWND hGrid, int row, int col);


// 列头点击回调 (hGrid, col)
typedef void (__stdcall *DataGridColumnHeaderClickCallback)(HWND hGrid, int col);


// 选择改变回调 (hGrid, row, col)
typedef void (__stdcall *DataGridSelectionChangedCallback)(HWND hGrid, int row, int col);


    // Message box (OK button only, supports Unicode and Emoji)
    __declspec(dllexport) void __stdcall show_message_box_bytes(
        HWND parent,
        const unsigned char* title_bytes,
        int title_len,
        const unsigned char* message_bytes,
        int message_len,
        const unsigned char* icon_bytes,
        int icon_len
    );


    // Confirm box (with callback, supports Unicode and Emoji)
    __declspec(dllexport) void __stdcall show_confirm_box_bytes(
        HWND parent,
        const unsigned char* title_bytes,
        int title_len,
        const unsigned char* message_bytes,
        int message_len,
        const unsigned char* icon_bytes,
        int icon_len,
        MessageBoxCallback callback
    );


    // ========== TabControl 功能 ==========

    // 创建 TabControl
    __declspec(dllexport) HWND __stdcall CreateTabControl(
        HWND hParent,
        int x,
        int y,
        int width,
        int height
    );


    // 添加 Tab 页
    __declspec(dllexport) int __stdcall AddTabItem(
        HWND hTabControl,
        const unsigned char* title_bytes,
        int title_len,
        HWND hContentWindow  // 可选，若为 NULL 则自动创建
    );


    // 获取 Tab 数量
    __declspec(dllexport) int __stdcall GetTabCount(
        HWND hTabControl
    );


    // 获取指定 Tab 页的标题（UTF-8，两次调用模式）
    __declspec(dllexport) int __stdcall GetTabTitle(
        HWND hTabControl,
        int index,
        unsigned char* buffer,
        int bufferSize
    );


    // 获取 TabControl 的位置和大小
    __declspec(dllexport) int __stdcall GetTabControlBounds(
        HWND hTabControl,
        int* x,
        int* y,
        int* width,
        int* height
    );


    // ========== 进度条功能 ==========

    // 创建进度条
    __declspec(dllexport) HWND __stdcall CreateProgressBar(
        HWND hParent,
        int x, int y, int width, int height,
        int initial_value,  // 初始值 (0-100)
        UINT32 fg_color,
        UINT32 bg_color,
        BOOL show_text,     // 是否显示百分比文本
        UINT32 text_color   // 文本颜色
    );


    // 获取进度条颜色
    __declspec(dllexport) int __stdcall GetProgressBarColor(
        HWND hProgressBar,
        UINT32* fg_color,
        UINT32* bg_color
    );


    // 获取进度条位置和大小
    __declspec(dllexport) int __stdcall GetProgressBarBounds(
        HWND hProgressBar,
        int* x,
        int* y,
        int* width,
        int* height
    );


    // 获取进度条是否显示百分比文本
    __declspec(dllexport) int __stdcall GetProgressBarShowText(
        HWND hProgressBar
    );


    // ========== 列表框功能 ==========

    // 创建列表框
    __declspec(dllexport) HWND __stdcall CreateListBox(
        HWND hParent,
        int x, int y, int width, int height,
        BOOL multi_select,
        UINT32 fg_color,
        UINT32 bg_color
    );


    // 添加列表项
    __declspec(dllexport) int __stdcall AddListItem(
        HWND hListBox,
        const unsigned char* text_bytes,
        int text_len
    );


    // 移除列表项
    __declspec(dllexport) void __stdcall RemoveListItem(
        HWND hListBox,
        int index
    );


    // 清空列表框
    __declspec(dllexport) void __stdcall ClearListBox(
        HWND hListBox
    );


    // 获取选中项索引
    __declspec(dllexport) int __stdcall GetSelectedIndex(
        HWND hListBox
    );


    // 设置选中项索引
    __declspec(dllexport) void __stdcall SetSelectedIndex(
        HWND hListBox,
        int index
    );


    // 获取列表项数量
    __declspec(dllexport) int __stdcall GetListItemCount(
        HWND hListBox
    );


    // 获取列表项文本
    __declspec(dllexport) int __stdcall GetListItemText(
        HWND hListBox,
        int index,
        unsigned char* buffer,
        int buffer_size
    );


    // 设置列表框回调
    __declspec(dllexport) void __stdcall SetListBoxCallback(
        HWND hListBox,
        ListBoxCallback callback
    );


    // 启用/禁用列表框
    __declspec(dllexport) void __stdcall EnableListBox(
        HWND hListBox,
        BOOL enable
    );


    // 显示/隐藏列表框
    __declspec(dllexport) void __stdcall ShowListBox(
        HWND hListBox,
        BOOL show
    );


    // 设置列表框位置和大小
    __declspec(dllexport) void __stdcall SetListBoxBounds(
        HWND hListBox,
        int x, int y, int width, int height
    );


    // ========== 组合框功能 ==========

    // 创建组合框（增强版）
    __declspec(dllexport) HWND __stdcall CreateComboBox(
        HWND hParent,
        int x, int y, int width, int height,
        BOOL readonly,
        UINT32 fg_color,
        UINT32 bg_color,
        int item_height,                        // 表项高度
        const unsigned char* font_name_bytes,  // 字体名称
        int font_name_len,
        int font_size,                          // 字体大小
        BOOL bold,                              // 粗体
        BOOL italic,                            // 斜体
        BOOL underline                          // 下划线
    );


    // 添加组合框项目
    __declspec(dllexport) int __stdcall AddComboItem(
        HWND hComboBox,
        const unsigned char* text_bytes,
        int text_len
    );


    // 移除组合框项目
    __declspec(dllexport) void __stdcall RemoveComboItem(
        HWND hComboBox,
        int index
    );


    // 清空组合框
    __declspec(dllexport) void __stdcall ClearComboBox(
        HWND hComboBox
    );


    // 获取组合框选中项索引
    __declspec(dllexport) int __stdcall GetComboSelectedIndex(
        HWND hComboBox
    );


    // 设置组合框选中项索引
    __declspec(dllexport) void __stdcall SetComboSelectedIndex(
        HWND hComboBox,
        int index
    );


    // 获取组合框项目数量
    __declspec(dllexport) int __stdcall GetComboItemCount(
        HWND hComboBox
    );


    // 获取组合框项目文本
    __declspec(dllexport) int __stdcall GetComboItemText(
        HWND hComboBox,
        int index,
        unsigned char* buffer,
        int buffer_size
    );


    // 设置组合框回调
    __declspec(dllexport) void __stdcall SetComboBoxCallback(
        HWND hComboBox,
        ComboBoxCallback callback
    );


    // 启用/禁用组合框
    __declspec(dllexport) void __stdcall EnableComboBox(
        HWND hComboBox,
        BOOL enable
    );


    // 显示/隐藏组合框
    __declspec(dllexport) void __stdcall ShowComboBox(
        HWND hComboBox,
        BOOL show
    );


    // 设置组合框位置和大小
    __declspec(dllexport) void __stdcall SetComboBoxBounds(
        HWND hComboBox,
        int x, int y, int width, int height
    );


    // 获取组合框文本
    __declspec(dllexport) int __stdcall GetComboBoxText(
        HWND hComboBox,
        unsigned char* buffer,
        int buffer_size
    );


    // 设置组合框文本
    __declspec(dllexport) void __stdcall SetComboBoxText(
        HWND hComboBox,
        const unsigned char* text_bytes,
        int text_len
    );


    // ========== 分组框功能 ==========

    // 创建分组框
    __declspec(dllexport) HWND __stdcall CreateGroupBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* title_bytes,
        int title_len,
        UINT32 border_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );


    // 添加子控件到分组框
    __declspec(dllexport) void __stdcall AddChildToGroup(
        HWND hGroupBox,
        HWND hChild
    );


    // 获取分组框标题
    __declspec(dllexport) int __stdcall GetGroupBoxTitle(
        HWND hGroupBox,
        unsigned char* buffer,
        int buffer_size
    );


    // 获取分组框位置和大小
    __declspec(dllexport) int __stdcall GetGroupBoxBounds(
        HWND hGroupBox,
        int* x,
        int* y,
        int* width,
        int* height
    );


    // ========== DataGridView 功能 ==========

    // 创建DataGridView
    __declspec(dllexport) HWND __stdcall CreateDataGridView(
        HWND hParent,
        int x, int y, int width, int height,
        BOOL virtual_mode,
        BOOL zebra_stripe,
        UINT32 fg_color,
        UINT32 bg_color
    );


    // --- 列管理 ---

    // 添加文本列
    __declspec(dllexport) int __stdcall DataGrid_AddTextColumn(
        HWND hGrid,
        const unsigned char* header_bytes,
        int header_len,
        int width
    );


    // 添加复选框列
    __declspec(dllexport) int __stdcall DataGrid_AddCheckBoxColumn(
        HWND hGrid,
        const unsigned char* header_bytes,
        int header_len,
        int width
    );


    // 添加按钮列
    __declspec(dllexport) int __stdcall DataGrid_AddButtonColumn(
        HWND hGrid,
        const unsigned char* header_bytes,
        int header_len,
        int width
    );


    // 获取列数
    __declspec(dllexport) int __stdcall DataGrid_GetColumnCount(
        HWND hGrid
    );


    // 设置列宽
    __declspec(dllexport) void __stdcall DataGrid_SetColumnWidth(
        HWND hGrid,
        int col_index,
        int width
    );


    // --- 行管理 ---

    // 添加行
    __declspec(dllexport) int __stdcall DataGrid_AddRow(
        HWND hGrid
    );


    // 移除行
    __declspec(dllexport) void __stdcall DataGrid_RemoveRow(
        HWND hGrid,
        int row_index
    );


    // 清空所有行
    __declspec(dllexport) void __stdcall DataGrid_ClearRows(
        HWND hGrid
    );


    // 获取行数
    __declspec(dllexport) int __stdcall DataGrid_GetRowCount(
        HWND hGrid
    );


    // --- 单元格操作 ---

    // 设置单元格文本
    __declspec(dllexport) void __stdcall DataGrid_SetCellText(
        HWND hGrid,
        int row, int col,
        const unsigned char* text_bytes,
        int text_len
    );


    // 获取单元格文本
    __declspec(dllexport) int __stdcall DataGrid_GetCellText(
        HWND hGrid,
        int row, int col,
        unsigned char* buffer,
        int buffer_size
    );


    // 设置单元格复选框状态
    __declspec(dllexport) void __stdcall DataGrid_SetCellChecked(
        HWND hGrid,
        int row, int col,
        BOOL checked
    );


    // 获取单元格复选框状态
    __declspec(dllexport) BOOL __stdcall DataGrid_GetCellChecked(
        HWND hGrid,
        int row, int col
    );


    // 设置单元格样式
    __declspec(dllexport) void __stdcall DataGrid_SetCellStyle(
        HWND hGrid,
        int row, int col,
        UINT32 fg_color,
        UINT32 bg_color,
        BOOL bold,
        BOOL italic
    );


    // --- 选择和导航 ---

    // 获取选中行
    __declspec(dllexport) int __stdcall DataGrid_GetSelectedRow(
        HWND hGrid
    );


    // 获取选中列
    __declspec(dllexport) int __stdcall DataGrid_GetSelectedCol(
        HWND hGrid
    );


    // 设置选中单元格
    __declspec(dllexport) void __stdcall DataGrid_SetSelectedCell(
        HWND hGrid,
        int row, int col
    );


    // 设置选择模式
    __declspec(dllexport) void __stdcall DataGrid_SetSelectionMode(
        HWND hGrid,
        int mode  // 0=单元格, 1=整行
    );


    // --- 排序 ---

    // 按列排序
    __declspec(dllexport) void __stdcall DataGrid_SortByColumn(
        HWND hGrid,
        int col_index,
        int sort_order  // 0=无, 1=升序, 2=降序
    );


    // --- 冻结 ---

    // 设置冻结首行
    __declspec(dllexport) void __stdcall DataGrid_SetFreezeHeader(
        HWND hGrid,
        BOOL freeze
    );


    // 设置冻结首列
    __declspec(dllexport) void __stdcall DataGrid_SetFreezeFirstColumn(
        HWND hGrid,
        BOOL freeze
    );


    // --- 外观 ---

    // 设置显示网格线
    __declspec(dllexport) void __stdcall DataGrid_SetShowGridLines(
        HWND hGrid,
        BOOL show
    );


    // 设置默认行高
    __declspec(dllexport) void __stdcall DataGrid_SetDefaultRowHeight(
        HWND hGrid,
        int height
    );


    // 设置列头高度
    __declspec(dllexport) void __stdcall DataGrid_SetHeaderHeight(
        HWND hGrid,
        int height
    );


    // --- 事件回调 ---

    // 设置单元格点击回调
    __declspec(dllexport) void __stdcall DataGrid_SetCellClickCallback(
        HWND hGrid,
        DataGridCellClickCallback callback
    );


    // 设置单元格双击回调
    __declspec(dllexport) void __stdcall DataGrid_SetCellDoubleClickCallback(
        HWND hGrid,
        DataGridCellDoubleClickCallback callback
    );


    // 设置单元格值改变回调
    __declspec(dllexport) void __stdcall DataGrid_SetCellValueChangedCallback(
        HWND hGrid,
        DataGridCellValueChangedCallback callback
    );


    // 设置列头点击回调
    __declspec(dllexport) void __stdcall DataGrid_SetColumnHeaderClickCallback(
        HWND hGrid,
        DataGridColumnHeaderClickCallback callback
    );


    // 设置选择改变回调
    __declspec(dllexport) void __stdcall DataGrid_SetSelectionChangedCallback(
        HWND hGrid,
        DataGridSelectionChangedCallback callback
    );


    // --- 其他 ---

    // 启用/禁用DataGridView
    __declspec(dllexport) void __stdcall DataGrid_Enable(
        HWND hGrid,
        BOOL enable
    );


    // 显示/隐藏DataGridView
    __declspec(dllexport) void __stdcall DataGrid_Show(
        HWND hGrid,
        BOOL show
    );


    // 设置DataGridView位置和大小
    __declspec(dllexport) void __stdcall DataGrid_SetBounds(
        HWND hGrid,
        int x, int y, int width, int height
    );


    // 刷新DataGridView
    __declspec(dllexport) void __stdcall DataGrid_Refresh(
        HWND hGrid
    );


    // 设置列头对齐方式 (0=左对齐, 1=居中, 2=右对齐)
    __declspec(dllexport) void __stdcall DataGrid_SetColumnHeaderAlignment(
        HWND hGrid,
        int col_index,
        int alignment
    );


    // 设置列单元格对齐方式 (0=左对齐, 1=居中, 2=右对齐)
    __declspec(dllexport) void __stdcall DataGrid_SetColumnCellAlignment(
        HWND hGrid,
        int col_index,
        int alignment
    );