examples/Csharp/EmojiWindowDemo_x64/EmojiWindowNative.cs


        #region 分组框
        [DllImport(DLL, CallingConvention = CC)] public static extern IntPtr CreateGroupBox(IntPtr parent, int x, int y, int w, int h, byte[] title, int titleLen, uint borderColor, uint bg, byte[] font, int fontLen, int fontSize, int bold, int italic, int underline);
        [DllImport(DLL, CallingConvention = CC)] public static extern void AddChildToGroup(IntPtr group, int child);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetGroupBoxTitle(IntPtr group, IntPtr buf, int bufSize);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetGroupBoxBounds(IntPtr group, out int x, out int y, out int w, out int h);
        #endregion

        #region TabControl
        [DllImport(DLL, CallingConvention = CC)] public static extern IntPtr CreateTabControl(IntPtr parent, int x, int y, int w, int h);
        [DllImport(DLL, CallingConvention = CC)] public static extern int AddTabItem(IntPtr tab, byte[] title, int titleLen, int contentHwnd);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetTabCount(IntPtr tab);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetTabTitle(IntPtr tab, int index, IntPtr buf, int bufSize);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetTabControlBounds(IntPtr tab, out int x, out int y, out int w, out int h);
        #endregion

        #region 进度条
        [DllImport(DLL, CallingConvention = CC)] public static extern IntPtr CreateProgressBar(IntPtr parent, int x, int y, int w, int h, int initVal, uint fg, uint bg, int showText, uint textColor);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetProgressBarColor(IntPtr pb, out uint fg, out uint bg);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetProgressBarBounds(IntPtr pb, out int x, out int y, out int w, out int h);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetProgressBarShowText(IntPtr pb);
        #endregion

        #region 列表框
        [DllImport(DLL, CallingConvention = CC)] public static extern int CreateListBox(IntPtr parent, int x, int y, int w, int h, int multiSelect, uint fg, uint bg);
        [DllImport(DLL, CallingConvention = CC)] public static extern int AddListItem(int listbox, byte[] text, int textLen);
        [DllImport(DLL, CallingConvention = CC)] public static extern void RemoveListItem(int listbox, int index);
        [DllImport(DLL, CallingConvention = CC)] public static extern void ClearListBox(int listbox);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetSelectedIndex(int listbox);
        [DllImport(DLL, CallingConvention = CC)] public static extern void SetSelectedIndex(int listbox, int index);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetListItemCount(int listbox);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetListItemText(int listbox, int index, IntPtr buf, int bufSize);
        [DllImport(DLL, CallingConvention = CC)] public static extern void SetListBoxCallback(int listbox, ListBoxCallback cb);
        [DllImport(DLL, CallingConvention = CC)] public static extern void EnableListBox(int listbox, int enable);
        [DllImport(DLL, CallingConvention = CC)] public static extern void ShowListBox(int listbox, int show);
        [DllImport(DLL, CallingConvention = CC)] public static extern void SetListBoxBounds(int listbox, int x, int y, int w, int h);
        #endregion

        #region 组合框
        [DllImport(DLL, CallingConvention = CC)] public static extern int CreateComboBox(IntPtr parent, int x, int y, int w, int h, int readOnly, uint fg, uint bg, int itemHeight, byte[] font, int fontLen, int fontSize, int bold, int italic, int underline);
        [DllImport(DLL, CallingConvention = CC)] public static extern int AddComboItem(int combo, byte[] text, int textLen);
        [DllImport(DLL, CallingConvention = CC)] public static extern void RemoveComboItem(int combo, int index);
        [DllImport(DLL, CallingConvention = CC)] public static extern void ClearComboBox(int combo);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetComboSelectedIndex(int combo);
        [DllImport(DLL, CallingConvention = CC)] public static extern void SetComboSelectedIndex(int combo, int index);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetComboItemCount(int combo);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetComboItemText(int combo, int index, IntPtr buf, int bufSize);
        [DllImport(DLL, CallingConvention = CC)] public static extern int GetComboBoxText(int combo, IntPtr buf, int bufSize);
        [DllImport(DLL, CallingConvention = CC)] public static extern void SetComboBoxText(int combo, byte[] text, int textLen);
        [DllImport(DLL, CallingConvention = CC)] public static extern void SetComboBoxCallback(int combo, ComboBoxCallback cb);
        [DllImport(DLL, CallingConvention = CC)] public static extern void EnableComboBox(int combo, int enable);
        [DllImport(DLL, CallingConvention = CC)] public static extern void ShowComboBox(int combo, int show);
        [DllImport(DLL, CallingConvention = CC)] public static extern void SetComboBoxBounds(int combo, int x, int y, int w, int h);
        #endregion

        #region DataGridView
        [DllImport(DLL, CallingConvention = CC)] public static extern int CreateDataGridView(IntPtr parent, int x, int y, int w, int h, int virtualMode, int alternateRowColor, uint fg, uint bg);
        [DllImport(DLL, CallingConvention = CC)] public static extern int DataGrid_AddTextColumn(int grid, byte[] header, int headerLen, int width);
        [DllImport(DLL, CallingConvention = CC)] public static extern int DataGrid_AddCheckBoxColumn(int grid, byte[] header, int headerLen, int width);
        [DllImport(DLL, CallingConvention = CC)] public static extern int DataGrid_AddButtonColumn(int grid, byte[] header, int headerLen, int width);
        [DllImport(DLL, CallingConvention = CC)] public static extern int DataGrid_AddRow(int grid);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_RemoveRow(int grid, int rowIndex);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_ClearRows(int grid);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetCellText(int grid, int row, int col, byte[] text, int textLen);
        [DllImport(DLL, CallingConvention = CC)] public static extern int DataGrid_GetCellText(int grid, int row, int col, IntPtr buf, int bufSize);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetCellChecked(int grid, int row, int col, int isChecked);
        [DllImport(DLL, CallingConvention = CC)] public static extern int DataGrid_GetCellChecked(int grid, int row, int col);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetCellStyle(int grid, int row, int col, uint fg, uint bg, int bold, int italic);
        [DllImport(DLL, CallingConvention = CC)] public static extern int DataGrid_GetSelectedRow(int grid);
        [DllImport(DLL, CallingConvention = CC)] public static extern int DataGrid_GetSelectedCol(int grid);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetSelectedCell(int grid, int row, int col);
        [DllImport(DLL, CallingConvention = CC)] public static extern int DataGrid_GetRowCount(int grid);
        [DllImport(DLL, CallingConvention = CC)] public static extern int DataGrid_GetColumnCount(int grid);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetSelectionMode(int grid, int mode);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SortByColumn(int grid, int col, int direction);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetShowGridLines(int grid, int show);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetDefaultRowHeight(int grid, int height);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetHeaderHeight(int grid, int height);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetColumnWidth(int grid, int col, int width);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetFreezeHeader(int grid, int freeze);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetFreezeFirstColumn(int grid, int freeze);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetColumnHeaderAlignment(int grid, int col, int align);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetColumnCellAlignment(int grid, int col, int align);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetCellClickCallback(int grid, DataGridCellCallback cb);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetCellDoubleClickCallback(int grid, DataGridCellCallback cb);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetSelectionChangedCallback(int grid, DataGridCellCallback cb);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetColumnHeaderClickCallback(int grid, DataGridColumnHeaderCallback cb);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetCellValueChangedCallback(int grid, DataGridCellCallback cb);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_Enable(int grid, int enable);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_Show(int grid, int show);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_SetBounds(int grid, int x, int y, int w, int h);
        [DllImport(DLL, CallingConvention = CC)] public static extern void DataGrid_Refresh(int grid);
        #endregion

        #region 信息框
        [DllImport(DLL, CallingConvention = CC)] public static extern void show_message_box_bytes(IntPtr parent, byte[] title, int titleLen, byte[] msg, int msgLen, byte[] icon, int iconLen);
        [DllImport(DLL, CallingConvention = CC)] public static extern void show_confirm_box_bytes(IntPtr parent, byte[] title, int titleLen, byte[] msg, int msgLen, byte[] icon, int iconLen, MessageBoxCallback cb);
        #endregion

    }
}